Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.1.0-rc1
-
Windows Vista x64
-
2836fde7e6b3b4b5d6c5f45543c539fbeb0bffb7
Description
- Start Creator, register Creator for post-mortem debugging, keep it running.
- Start a known-to-crash program, crash it.
- When Windows asks, select "Debug" and then "Debug with Qt Creator".
This will result in one of the following behaviors:
- A popup appears, stating: "Unable to send command line arguments to the already running instance. It appears to be not responding."
- Nothing will happen. qtcdebugger.exe and the crashed program will keep running in the background.
If Creator is not running, it works fine.
Attachments
Issue Links
- is replaced by
-
QTCREATORBUG-2827 Post-mortem debugging does not show proper stacktrace if Creator is already running
- Closed