Debugger: Fix attaching via QtSingleApplication.

In case qtcdebugger sends a command to an already running
instance of Qt Creator (Windows).

Reviewed-by: hjk
Task-number: QTCREATORBUG-2814